--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,6 @@ details{display:block}
 summary{display:list-item}
 template{display:none}
 [hidden]{display:none}
+ul{padding: 0; margin:0; list-style: none;}
+a{text-decoration: none;}
+button{-webkit-appearance: none;}
